# notescript

./: README.md  notescript.cabal
bench/: RunBench.hs
src/: Logging.hs  NoteScript.hs
src/LendingClub/: Monad.hs
src/NoteScript/: LendingClub.hs  Prosper.hs  Syntax.hs
src/Prosper/: MarketDataUser.hs  Monad.hs
test/: RunTests.hs  csvtest.hs
